Tools/KLEE_Platform/stp/build/lib/Parser/parsesmt2.output
Terminals unused in grammar

   DECLARE_SORT_TOK
   DECLARE_FUN_REC_TOK
   DECLARE_FUNS_REC_TOK
   DEFINE_SORT_TOK
   GET_ASSERTIONS_TOK
   GET_ASSIGNMENT_TOK
   GET_INFO_TOK
   GET_OPTION_TOK
   GET_PROOF_TOK
   GET_UNSAT_ASSUMPTION_TOK
   GET_UNSAT_CORE_TOK
   RESET_ASSERTIONS_TOK


State 249 conflicts: 1 reduce/reduce


Grammar

    0 $accept: cmd "end of file"

    1 cmd: commands "end of file"

    2 commands: commands LPAREN_TOK cmdi RPAREN_TOK
    3         | LPAREN_TOK cmdi RPAREN_TOK

    4 cmdi: ASSERT_TOK an_formula
    5     | CHECK_SAT_TOK
    6     | CHECK_SAT_ASSUMING_TOK LPAREN_TOK an_term RPAREN_TOK
    7     | DECLARE_CONST_TOK LPAREN_TOK an_term RPAREN_TOK
    8     | DECLARE_FUNCTION_TOK var_decl
    9     | DEFINE_FUNCTION_TOK function_def
   10     | ECHO_TOK STRING_TOK
   11     | EXIT_TOK
   12     | GET_MODEL_TOK
   13     | GET_VALUE_TOK LPAREN_TOK an_mixed RPAREN_TOK
   14     | SET_OPTION_TOK COLON_TOK STRING_TOK STRING_TOK
   15     | SET_OPTION_TOK COLON_TOK STRING_TOK FALSE_TOK
   16     | SET_OPTION_TOK COLON_TOK STRING_TOK TRUE_TOK
   17     | PUSH_TOK NUMERAL_TOK
   18     | POP_TOK NUMERAL_TOK
   19     | RESET_TOK
   20     | LOGIC_TOK STRING_TOK
   21     | NOTES_TOK attribute STRING_TOK
   22     | NOTES_TOK attribute DECIMAL_TOK
   23     | NOTES_TOK attribute

   24 function_param: LPAREN_TOK STRING_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK RPAREN_TOK

   25 function_params: function_param
   26                | function_params function_param

   27 function_def: STRING_TOK LPAREN_TOK function_params RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK an_term
   28             | STRING_TOK LPAREN_TOK function_params RPAREN_TOK BOOL_TOK an_formula
   29             | STRING_TOK LPAREN_TOK RPAREN_TOK BOOL_TOK an_formula
   30             | STRING_TOK LPAREN_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK an_term
   31             | STRING_TOK LPAREN_TOK function_params RPAREN_TOK LPAREN_TOK ARRAY_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK RPAREN_TOK an_term
   32             | STRING_TOK LPAREN_TOK RPAREN_TOK LPAREN_TOK ARRAY_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK RPAREN_TOK an_term

   33 status: STRING_TOK

   34 attribute: SOURCE_TOK
   35          | CATEGORY_TOK
   36          | DIFFICULTY_TOK
   37          | VERSION_TOK
   38          | STATUS_TOK status
   39          | LICENSE_TOK

   40 var_decl: STRING_TOK LPAREN_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK
   41         | STRING_TOK LPAREN_TOK RPAREN_TOK BOOL_TOK
   42         | STRING_TOK LPAREN_TOK RPAREN_TOK LPAREN_TOK ARRAY_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK RPAREN_TOK

   43 an_mixed: an_formula
   44         | an_term
   45         | an_mixed an_formula
   46         | an_mixed an_term

   47 an_formulas: an_formula
   48            | an_formulas an_formula

   49 an_formula: TRUE_TOK
   50           | FALSE_TOK
   51           | FORMID_TOK
   52           | LPAREN_TOK EQ_TOK an_term an_term RPAREN_TOK
   53           | LPAREN_TOK DISTINCT_TOK an_terms RPAREN_TOK
   54           | LPAREN_TOK DISTINCT_TOK an_formulas RPAREN_TOK
   55           | LPAREN_TOK BVSLT_TOK an_term an_term RPAREN_TOK
   56           | LPAREN_TOK BVSLE_TOK an_term an_term RPAREN_TOK
   57           | LPAREN_TOK BVSGT_TOK an_term an_term RPAREN_TOK
   58           | LPAREN_TOK BVSGE_TOK an_term an_term RPAREN_TOK
   59           | LPAREN_TOK BVLT_TOK an_term an_term RPAREN_TOK
   60           | LPAREN_TOK BVLE_TOK an_term an_term RPAREN_TOK
   61           | LPAREN_TOK BVGT_TOK an_term an_term RPAREN_TOK
   62           | LPAREN_TOK BVGE_TOK an_term an_term RPAREN_TOK
   63           | LPAREN_TOK an_formula RPAREN_TOK
   64           | LPAREN_TOK NOT_TOK an_formula RPAREN_TOK
   65           | LPAREN_TOK IMPLIES_TOK an_formula an_formula RPAREN_TOK
   66           | LPAREN_TOK ITE_TOK an_formula an_formula an_formula RPAREN_TOK
   67           | LPAREN_TOK AND_TOK an_formulas RPAREN_TOK
   68           | LPAREN_TOK OR_TOK an_formulas RPAREN_TOK
   69           | LPAREN_TOK XOR_TOK an_formula an_formula RPAREN_TOK
   70           | LPAREN_TOK EQ_TOK an_formula an_formula RPAREN_TOK

   71 $@1: %empty

   72 an_formula: LPAREN_TOK LET_TOK LPAREN_TOK $@1 lets RPAREN_TOK an_formula RPAREN_TOK
   73           | LPAREN_TOK BOOLEAN_FUNCTIONID_TOK an_mixed RPAREN_TOK
   74           | BOOLEAN_FUNCTIONID_TOK
   75           | LPAREN_TOK EXCLAIMATION_MARK_TOK an_formula NAMED_ATTRIBUTE_TOK STRING_TOK RPAREN_TOK

   76 lets: let lets
   77     | let

   78 let: LPAREN_TOK STRING_TOK an_formula RPAREN_TOK
   79    | LPAREN_TOK STRING_TOK an_term RPAREN_TOK

   80 an_terms: an_term
   81         | an_terms an_term

   82 an_term: TERMID_TOK
   83        | LPAREN_TOK an_term RPAREN_TOK
   84        | SELECT_TOK an_term an_term
   85        | STORE_TOK an_term an_term an_term
   86        | LPAREN_TOK UNDERSCORE_TOK BVEXTRACT_TOK NUMERAL_TOK NUMERAL_TOK RPAREN_TOK an_term
   87        | LPAREN_TOK UNDERSCORE_TOK BVZX_TOK NUMERAL_TOK RPAREN_TOK an_term
   88        | LPAREN_TOK UNDERSCORE_TOK BVSX_TOK NUMERAL_TOK RPAREN_TOK an_term
   89        | ITE_TOK an_formula an_term an_term
   90        | BVCONCAT_TOK an_term an_term
   91        | BVNOT_TOK an_term
   92        | BVNEG_TOK an_term
   93        | BVAND_TOK an_term an_term
   94        | BVOR_TOK an_term an_term
   95        | BVXOR_TOK an_term an_term
   96        | BVXNOR_TOK an_term an_term
   97        | BVCOMP_TOK an_term an_term
   98        | BVSUB_TOK an_term an_term
   99        | BVPLUS_TOK an_term an_term
  100        | BVMULT_TOK an_term an_term
  101        | BVDIV_TOK an_term an_term
  102        | BVMOD_TOK an_term an_term
  103        | SBVDIV_TOK an_term an_term
  104        | SBVREM_TOK an_term an_term
  105        | SBVMOD_TOK an_term an_term
  106        | BVNAND_TOK an_term an_term
  107        | BVNOR_TOK an_term an_term
  108        | BVLEFTSHIFT_1_TOK an_term an_term
  109        | BVRIGHTSHIFT_1_TOK an_term an_term
  110        | BVARITHRIGHTSHIFT_TOK an_term an_term
  111        | LPAREN_TOK UNDERSCORE_TOK BVROTATE_LEFT_TOK NUMERAL_TOK RPAREN_TOK an_term
  112        | LPAREN_TOK UNDERSCORE_TOK BVROTATE_RIGHT_TOK NUMERAL_TOK RPAREN_TOK an_term
  113        | LPAREN_TOK UNDERSCORE_TOK BVREPEAT_TOK NUMERAL_TOK RPAREN_TOK an_term
  114        | UNDERSCORE_TOK BVCONST_DECIMAL_TOK NUMERAL_TOK
  115        | BVCONST_HEXIDECIMAL_TOK
  116        | BVCONST_BINARY_TOK
  117        | LPAREN_TOK BITVECTOR_FUNCTIONID_TOK an_mixed RPAREN_TOK
  118        | BITVECTOR_FUNCTIONID_TOK
  119        | LPAREN_TOK EXCLAIMATION_MARK_TOK an_term NAMED_ATTRIBUTE_TOK STRING_TOK RPAREN_TOK

  120 $@2: %empty

  121 an_term: LPAREN_TOK LET_TOK LPAREN_TOK $@2 lets RPAREN_TOK an_term RPAREN_TOK


Terminals, with rules where they appear

"end of file" (0) 0 1
error (256)
NUMERAL_TOK (258) 17 18 24 27 30 31 32 40 42 86 87 88 111 112 113 114
BVCONST_DECIMAL_TOK (259) 114
BVCONST_BINARY_TOK (260) 116
BVCONST_HEXIDECIMAL_TOK (261) 115
DECIMAL_TOK (262) 22
FORMID_TOK (263) 51
TERMID_TOK (264) 82
STRING_TOK (265) 10 14 15 16 20 21 24 27 28 29 30 31 32 33 40 41 42
    75 78 79 119
BITVECTOR_FUNCTIONID_TOK (266) 117 118
BOOLEAN_FUNCTIONID_TOK (267) 73 74
SOURCE_TOK (268) 34
CATEGORY_TOK (269) 35
DIFFICULTY_TOK (270) 36
VERSION_TOK (271) 37
STATUS_TOK (272) 38
LICENSE_TOK (273) 39
UNDERSCORE_TOK (274) 24 27 30 31 32 40 42 86 87 88 111 112 113 114
LPAREN_TOK (275) 2 3 6 7 13 24 27 28 29 30 31 32 40 41 42 52 53 54
    55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 72 73 75 78 79
    83 86 87 88 111 112 113 117 119 121
RPAREN_TOK (276) 2 3 6 7 13 24 27 28 29 30 31 32 40 41 42 52 53 54
    55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 72 73 75 78 79
    83 86 87 88 111 112 113 117 119 121
EXCLAIMATION_MARK_TOK (277) 75 119
NAMED_ATTRIBUTE_TOK (278) 75 119
BVLEFTSHIFT_1_TOK (279) 108
BVRIGHTSHIFT_1_TOK (280) 109
BVARITHRIGHTSHIFT_TOK (281) 110
BVPLUS_TOK (282) 99
BVSUB_TOK (283) 98
BVNOT_TOK (284) 91
BVMULT_TOK (285) 100
BVDIV_TOK (286) 101
SBVDIV_TOK (287) 103
BVMOD_TOK (288) 102
SBVREM_TOK (289) 104
SBVMOD_TOK (290) 105
BVNEG_TOK (291) 92
BVAND_TOK (292) 93
BVOR_TOK (293) 94
BVXOR_TOK (294) 95
BVNAND_TOK (295) 106
BVNOR_TOK (296) 107
BVXNOR_TOK (297) 96
BVCONCAT_TOK (298) 90
BVLT_TOK (299) 59
BVGT_TOK (300) 61
BVLE_TOK (301) 60
BVGE_TOK (302) 62
BVSLT_TOK (303) 55
BVSGT_TOK (304) 57
BVSLE_TOK (305) 56
BVSGE_TOK (306) 58
BVSX_TOK (307) 88
BVEXTRACT_TOK (308) 86
BVZX_TOK (309) 87
BVROTATE_RIGHT_TOK (310) 112
BVROTATE_LEFT_TOK (311) 111
BVREPEAT_TOK (312) 113
BVCOMP_TOK (313) 97
BITVEC_TOK (314) 24 27 30 31 32 40 42
ARRAY_TOK (315) 31 32 42
BOOL_TOK (316) 28 29 41
TRUE_TOK (317) 16 49
FALSE_TOK (318) 15 50
NOT_TOK (319) 64
AND_TOK (320) 67
OR_TOK (321) 68
XOR_TOK (322) 69
ITE_TOK (323) 66 89
EQ_TOK (324) 52 70
IMPLIES_TOK (325) 65
DISTINCT_TOK (326) 53 54
LET_TOK (327) 72 121
COLON_TOK (328) 14 15 16
ASSERT_TOK (329) 4
CHECK_SAT_TOK (330) 5
CHECK_SAT_ASSUMING_TOK (331) 6
DECLARE_CONST_TOK (332) 7
DECLARE_FUNCTION_TOK (333) 8
DECLARE_SORT_TOK (334)
DEFINE_FUNCTION_TOK (335) 9
DECLARE_FUN_REC_TOK (336)
DECLARE_FUNS_REC_TOK (337)
DEFINE_SORT_TOK (338)
ECHO_TOK (339) 10
EXIT_TOK (340) 11
GET_ASSERTIONS_TOK (341)
GET_ASSIGNMENT_TOK (342)
GET_INFO_TOK (343)
GET_MODEL_TOK (344) 12
GET_OPTION_TOK (345)
GET_PROOF_TOK (346)
GET_UNSAT_ASSUMPTION_TOK (347)
GET_UNSAT_CORE_TOK (348)
GET_VALUE_TOK (349) 13
POP_TOK (350) 18
PUSH_TOK (351) 17
RESET_TOK (352) 19
RESET_ASSERTIONS_TOK (353)
NOTES_TOK (354) 21 22 23
LOGIC_TOK (355) 20
SET_OPTION_TOK (356) 14 15 16
SELECT_TOK (357) 84
STORE_TOK (358) 85


Nonterminals, with rules where they appear

$accept (104)
    on left: 0
cmd (105)
    on left: 1, on right: 0
commands (106)
    on left: 2 3, on right: 1 2
cmdi (107)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23,
    on right: 2 3
function_param (108)
    on left: 24, on right: 25 26
function_params (109)
    on left: 25 26, on right: 26 27 28 31
function_def (110)
    on left: 27 28 29 30 31 32, on right: 9
status (111)
    on left: 33, on right: 38
attribute (112)
    on left: 34 35 36 37 38 39, on right: 21 22 23
var_decl (113)
    on left: 40 41 42, on right: 8
an_mixed (114)
    on left: 43 44 45 46, on right: 13 45 46 73 117
an_formulas (115)
    on left: 47 48, on right: 48 54 67 68
an_formula (116)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68 69 70 72 73 74 75, on right: 4 28 29 43 45 47 48 63 64 65
    66 69 70 72 75 78 89
$@1 (117)
    on left: 71, on right: 72
lets (118)
    on left: 76 77, on right: 72 76 121
let (119)
    on left: 78 79, on right: 76 77
an_terms (120)
    on left: 80 81, on right: 53 81
an_term (121)
    on left: 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99
    100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115
    116 117 118 119 121, on right: 6 7 27 30 31 32 44 46 52 55 56 57
    58 59 60 61 62 79 80 81 83 84 85 86 87 88 89 90 91 92 93 94 95
    96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112
    113 119 121
$@2 (122)
    on left: 120, on right: 121


State 0

    0 $accept: . cmd "end of file"

    LPAREN_TOK  shift, and go to state 1

    cmd       go to state 2
    commands  go to state 3


State 1

    3 commands: LPAREN_TOK . cmdi RPAREN_TOK

    ASSERT_TOK              shift, and go to state 4
    CHECK_SAT_TOK           shift, and go to state 5
    CHECK_SAT_ASSUMING_TOK  shift, and go to state 6
    DECLARE_CONST_TOK       shift, and go to state 7
    DECLARE_FUNCTION_TOK    shift, and go to state 8
    DEFINE_FUNCTION_TOK     shift, and go to state 9
    ECHO_TOK                shift, and go to state 10
    EXIT_TOK                shift, and go to state 11
    GET_MODEL_TOK           shift, and go to state 12
    GET_VALUE_TOK           shift, and go to state 13
    POP_TOK                 shift, and go to state 14
    PUSH_TOK                shift, and go to state 15
    RESET_TOK               shift, and go to state 16
    NOTES_TOK               shift, and go to state 17
    LOGIC_TOK               shift, and go to state 18
    SET_OPTION_TOK          shift, and go to state 19

    cmdi  go to state 20


State 2

    0 $accept: cmd . "end of file"

    "end of file"  shift, and go to state 21


State 3

    1 cmd: commands . "end of file"
    2 commands: commands . LPAREN_TOK cmdi RPAREN_TOK

    "end of file"  shift, and go to state 22
    LPAREN_TOK     shift, and go to state 23


State 4

    4 cmdi: ASSERT_TOK . an_formula

    FORMID_TOK              shift, and go to state 24
    BOOLEAN_FUNCTIONID_TOK  shift, and go to state 25
    LPAREN_TOK              shift, and go to state 26
    TRUE_TOK                shift, and go to state 27
    FALSE_TOK               shift, and go to state 28

    an_formula  go to state 29


State 5

    5 cmdi: CHECK_SAT_TOK .

    $default  reduce using rule 5 (cmdi)


State 6

    6 cmdi: CHECK_SAT_ASSUMING_TOK . LPAREN_TOK an_term RPAREN_TOK

    LPAREN_TOK  shift, and go to state 30


State 7

    7 cmdi: DECLARE_CONST_TOK . LPAREN_TOK an_term RPAREN_TOK

    LPAREN_TOK  shift, and go to state 31


State 8

    8 cmdi: DECLARE_FUNCTION_TOK . var_decl

    STRING_TOK  shift, and go to state 32

    var_decl  go to state 33


State 9

    9 cmdi: DEFINE_FUNCTION_TOK . function_def

    STRING_TOK  shift, and go to state 34

    function_def  go to state 35


State 10

   10 cmdi: ECHO_TOK . STRING_TOK

    STRING_TOK  shift, and go to state 36


State 11

   11 cmdi: EXIT_TOK .

    $default  reduce using rule 11 (cmdi)


State 12

   12 cmdi: GET_MODEL_TOK .

    $default  reduce using rule 12 (cmdi)


State 13

   13 cmdi: GET_VALUE_TOK . LPAREN_TOK an_mixed RPAREN_TOK

    LPAREN_TOK  shift, and go to state 37


State 14

   18 cmdi: POP_TOK . NUMERAL_TOK

    NUMERAL_TOK  shift, and go to state 38


State 15

   17 cmdi: PUSH_TOK . NUMERAL_TOK

    NUMERAL_TOK  shift, and go to state 39


State 16

   19 cmdi: RESET_TOK .

    $default  reduce using rule 19 (cmdi)


State 17

   21 cmdi: NOTES_TOK . attribute STRING_TOK
   22     | NOTES_TOK . attribute DECIMAL_TOK
   23     | NOTES_TOK . attribute

    SOURCE_TOK      shift, and go to state 40
    CATEGORY_TOK    shift, and go to state 41
    DIFFICULTY_TOK  shift, and go to state 42
    VERSION_TOK     shift, and go to state 43
    STATUS_TOK      shift, and go to state 44
    LICENSE_TOK     shift, and go to state 45

    attribute  go to state 46


State 18

   20 cmdi: LOGIC_TOK . STRING_TOK

    STRING_TOK  shift, and go to state 47


State 19

   14 cmdi: SET_OPTION_TOK . COLON_TOK STRING_TOK STRING_TOK
   15     | SET_OPTION_TOK . COLON_TOK STRING_TOK FALSE_TOK
   16     | SET_OPTION_TOK . COLON_TOK STRING_TOK TRUE_TOK

    COLON_TOK  shift, and go to state 48


State 20

    3 commands: LPAREN_TOK cmdi . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 49


State 21

    0 $accept: cmd "end of file" .

    $default  accept


State 22

    1 cmd: commands "end of file" .

    $default  reduce using rule 1 (cmd)


State 23

    2 commands: commands LPAREN_TOK . cmdi RPAREN_TOK

    ASSERT_TOK              shift, and go to state 4
    CHECK_SAT_TOK           shift, and go to state 5
    CHECK_SAT_ASSUMING_TOK  shift, and go to state 6
    DECLARE_CONST_TOK       shift, and go to state 7
    DECLARE_FUNCTION_TOK    shift, and go to state 8
    DEFINE_FUNCTION_TOK     shift, and go to state 9
    ECHO_TOK                shift, and go to state 10
    EXIT_TOK                shift, and go to state 11
    GET_MODEL_TOK           shift, and go to state 12
    GET_VALUE_TOK           shift, and go to state 13
    POP_TOK                 shift, and go to state 14
    PUSH_TOK                shift, and go to state 15
    RESET_TOK               shift, and go to state 16
    NOTES_TOK               shift, and go to state 17
    LOGIC_TOK               shift, and go to state 18
    SET_OPTION_TOK          shift, and go to state 19

    cmdi  go to state 50


State 24

   51 an_formula: FORMID_TOK .

    $default  reduce using rule 51 (an_formula)


State 25

   74 an_formula: BOOLEAN_FUNCTIONID_TOK .

    $default  reduce using rule 74 (an_formula)


State 26

   52 an_formula: LPAREN_TOK . EQ_TOK an_term an_term RPAREN_TOK
   53           | LPAREN_TOK . DISTINCT_TOK an_terms RPAREN_TOK
   54           | LPAREN_TOK . DISTINCT_TOK an_formulas RPAREN_TOK
   55           | LPAREN_TOK . BVSLT_TOK an_term an_term RPAREN_TOK
   56           | LPAREN_TOK . BVSLE_TOK an_term an_term RPAREN_TOK
   57           | LPAREN_TOK . BVSGT_TOK an_term an_term RPAREN_TOK
   58           | LPAREN_TOK . BVSGE_TOK an_term an_term RPAREN_TOK
   59           | LPAREN_TOK . BVLT_TOK an_term an_term RPAREN_TOK
   60           | LPAREN_TOK . BVLE_TOK an_term an_term RPAREN_TOK
   61           | LPAREN_TOK . BVGT_TOK an_term an_term RPAREN_TOK
   62           | LPAREN_TOK . BVGE_TOK an_term an_term RPAREN_TOK
   63           | LPAREN_TOK . an_formula RPAREN_TOK
   64           | LPAREN_TOK . NOT_TOK an_formula RPAREN_TOK
   65           | LPAREN_TOK . IMPLIES_TOK an_formula an_formula RPAREN_TOK
   66           | LPAREN_TOK . ITE_TOK an_formula an_formula an_formula RPAREN_TOK
   67           | LPAREN_TOK . AND_TOK an_formulas RPAREN_TOK
   68           | LPAREN_TOK . OR_TOK an_formulas RPAREN_TOK
   69           | LPAREN_TOK . XOR_TOK an_formula an_formula RPAREN_TOK
   70           | LPAREN_TOK . EQ_TOK an_formula an_formula RPAREN_TOK
   72           | LPAREN_TOK . LET_TOK LPAREN_TOK $@1 lets RPAREN_TOK an_formula RPAREN_TOK
   73           | LPAREN_TOK . BOOLEAN_FUNCTIONID_TOK an_mixed RPAREN_TOK
   75           | LPAREN_TOK . EXCLAIMATION_MARK_TOK an_formula NAMED_ATTRIBUTE_TOK STRING_TOK RPAREN_TOK

    FORMID_TOK              shift, and go to state 24
    BOOLEAN_FUNCTIONID_TOK  shift, and go to state 51
    LPAREN_TOK              shift, and go to state 26
    EXCLAIMATION_MARK_TOK   shift, and go to state 52
    BVLT_TOK                shift, and go to state 53
    BVGT_TOK                shift, and go to state 54
    BVLE_TOK                shift, and go to state 55
    BVGE_TOK                shift, and go to state 56
    BVSLT_TOK               shift, and go to state 57
    BVSGT_TOK               shift, and go to state 58
    BVSLE_TOK               shift, and go to state 59
    BVSGE_TOK               shift, and go to state 60
    TRUE_TOK                shift, and go to state 27
    FALSE_TOK               shift, and go to state 28
    NOT_TOK                 shift, and go to state 61
    AND_TOK                 shift, and go to state 62
    OR_TOK                  shift, and go to state 63
    XOR_TOK                 shift, and go to state 64
    ITE_TOK                 shift, and go to state 65
    EQ_TOK                  shift, and go to state 66
    IMPLIES_TOK             shift, and go to state 67
    DISTINCT_TOK            shift, and go to state 68
    LET_TOK                 shift, and go to state 69

    an_formula  go to state 70


State 27

   49 an_formula: TRUE_TOK .

    $default  reduce using rule 49 (an_formula)


State 28

   50 an_formula: FALSE_TOK .

    $default  reduce using rule 50 (an_formula)


State 29

    4 cmdi: ASSERT_TOK an_formula .

    $default  reduce using rule 4 (cmdi)


State 30

    6 cmdi: CHECK_SAT_ASSUMING_TOK LPAREN_TOK . an_term RPAREN_TOK

    BVCONST_BINARY_TOK        shift, and go to state 71
    BVCONST_HEXIDECIMAL_TOK   shift, and go to state 72
    TERMID_TOK                shift, and go to state 73
    BITVECTOR_FUNCTIONID_TOK  shift, and go to state 74
    UNDERSCORE_TOK            shift, and go to state 75
    LPAREN_TOK                shift, and go to state 76
    BVLEFTSHIFT_1_TOK         shift, and go to state 77
    BVRIGHTSHIFT_1_TOK        shift, and go to state 78
    BVARITHRIGHTSHIFT_TOK     shift, and go to state 79
    BVPLUS_TOK                shift, and go to state 80
    BVSUB_TOK                 shift, and go to state 81
    BVNOT_TOK                 shift, and go to state 82
    BVMULT_TOK                shift, and go to state 83
    BVDIV_TOK                 shift, and go to state 84
    SBVDIV_TOK                shift, and go to state 85
    BVMOD_TOK                 shift, and go to state 86
    SBVREM_TOK                shift, and go to state 87
    SBVMOD_TOK                shift, and go to state 88
    BVNEG_TOK                 shift, and go to state 89
    BVAND_TOK                 shift, and go to state 90
    BVOR_TOK                  shift, and go to state 91
    BVXOR_TOK                 shift, and go to state 92
    BVNAND_TOK                shift, and go to state 93
    BVNOR_TOK                 shift, and go to state 94
    BVXNOR_TOK                shift, and go to state 95
    BVCONCAT_TOK              shift, and go to state 96
    BVCOMP_TOK                shift, and go to state 97
    ITE_TOK                   shift, and go to state 98
    SELECT_TOK                shift, and go to state 99
    STORE_TOK                 shift, and go to state 100

    an_term  go to state 101


State 31

    7 cmdi: DECLARE_CONST_TOK LPAREN_TOK . an_term RPAREN_TOK

    BVCONST_BINARY_TOK        shift, and go to state 71
    BVCONST_HEXIDECIMAL_TOK   shift, and go to state 72
    TERMID_TOK                shift, and go to state 73
    BITVECTOR_FUNCTIONID_TOK  shift, and go to state 74
    UNDERSCORE_TOK            shift, and go to state 75
    LPAREN_TOK                shift, and go to state 76
    BVLEFTSHIFT_1_TOK         shift, and go to state 77
    BVRIGHTSHIFT_1_TOK        shift, and go to state 78
    BVARITHRIGHTSHIFT_TOK     shift, and go to state 79
    BVPLUS_TOK                shift, and go to state 80
    BVSUB_TOK                 shift, and go to state 81
    BVNOT_TOK                 shift, and go to state 82
    BVMULT_TOK                shift, and go to state 83
    BVDIV_TOK                 shift, and go to state 84
    SBVDIV_TOK                shift, and go to state 85
    BVMOD_TOK                 shift, and go to state 86
    SBVREM_TOK                shift, and go to state 87
    SBVMOD_TOK                shift, and go to state 88
    BVNEG_TOK                 shift, and go to state 89
    BVAND_TOK                 shift, and go to state 90
    BVOR_TOK                  shift, and go to state 91
    BVXOR_TOK                 shift, and go to state 92
    BVNAND_TOK                shift, and go to state 93
    BVNOR_TOK                 shift, and go to state 94
    BVXNOR_TOK                shift, and go to state 95
    BVCONCAT_TOK              shift, and go to state 96
    BVCOMP_TOK                shift, and go to state 97
    ITE_TOK                   shift, and go to state 98
    SELECT_TOK                shift, and go to state 99
    STORE_TOK                 shift, and go to state 100

    an_term  go to state 102


State 32

   40 var_decl: STRING_TOK . LPAREN_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK
   41         | STRING_TOK . LPAREN_TOK RPAREN_TOK BOOL_TOK
   42         | STRING_TOK . LPAREN_TOK RPAREN_TOK LPAREN_TOK ARRAY_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK RPAREN_TOK

    LPAREN_TOK  shift, and go to state 103


State 33

    8 cmdi: DECLARE_FUNCTION_TOK var_decl .

    $default  reduce using rule 8 (cmdi)


State 34

   27 function_def: STRING_TOK . LPAREN_TOK function_params RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK an_term
   28             | STRING_TOK . LPAREN_TOK function_params RPAREN_TOK BOOL_TOK an_formula
   29             | STRING_TOK . LPAREN_TOK RPAREN_TOK BOOL_TOK an_formula
   30             | STRING_TOK . LPAREN_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK an_term
   31             | STRING_TOK . LPAREN_TOK function_params RPAREN_TOK LPAREN_TOK ARRAY_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK RPAREN_TOK an_term
   32             | STRING_TOK . LPAREN_TOK RPAREN_TOK LPAREN_TOK ARRAY_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK RPAREN_TOK an_term

    LPAREN_TOK  shift, and go to state 104


State 35

    9 cmdi: DEFINE_FUNCTION_TOK function_def .

    $default  reduce using rule 9 (cmdi)


State 36

   10 cmdi: ECHO_TOK STRING_TOK .

    $default  reduce using rule 10 (cmdi)


State 37

   13 cmdi: GET_VALUE_TOK LPAREN_TOK . an_mixed RPAREN_TOK

    BVCONST_BINARY_TOK        shift, and go to state 71
    BVCONST_HEXIDECIMAL_TOK   shift, and go to state 72
    FORMID_TOK                shift, and go to state 24
    TERMID_TOK                shift, and go to state 73
    BITVECTOR_FUNCTIONID_TOK  shift, and go to state 74
    BOOLEAN_FUNCTIONID_TOK    shift, and go to state 25
    UNDERSCORE_TOK            shift, and go to state 75
    LPAREN_TOK                shift, and go to state 105
    BVLEFTSHIFT_1_TOK         shift, and go to state 77
    BVRIGHTSHIFT_1_TOK        shift, and go to state 78
    BVARITHRIGHTSHIFT_TOK     shift, and go to state 79
    BVPLUS_TOK                shift, and go to state 80
    BVSUB_TOK                 shift, and go to state 81
    BVNOT_TOK                 shift, and go to state 82
    BVMULT_TOK                shift, and go to state 83
    BVDIV_TOK                 shift, and go to state 84
    SBVDIV_TOK                shift, and go to state 85
    BVMOD_TOK                 shift, and go to state 86
    SBVREM_TOK                shift, and go to state 87
    SBVMOD_TOK                shift, and go to state 88
    BVNEG_TOK                 shift, and go to state 89
    BVAND_TOK                 shift, and go to state 90
    BVOR_TOK                  shift, and go to state 91
    BVXOR_TOK                 shift, and go to state 92
    BVNAND_TOK                shift, and go to state 93
    BVNOR_TOK                 shift, and go to state 94
    BVXNOR_TOK                shift, and go to state 95
    BVCONCAT_TOK              shift, and go to state 96
    BVCOMP_TOK                shift, and go to state 97
    TRUE_TOK                  shift, and go to state 27
    FALSE_TOK                 shift, and go to state 28
    ITE_TOK                   shift, and go to state 98
    SELECT_TOK                shift, and go to state 99
    STORE_TOK                 shift, and go to state 100

    an_mixed    go to state 106
    an_formula  go to state 107
    an_term     go to state 108


State 38

   18 cmdi: POP_TOK NUMERAL_TOK .

    $default  reduce using rule 18 (cmdi)


State 39

   17 cmdi: PUSH_TOK NUMERAL_TOK .

    $default  reduce using rule 17 (cmdi)


State 40

   34 attribute: SOURCE_TOK .

    $default  reduce using rule 34 (attribute)


State 41
